# Blogger

./: Blogger.postman_collection.json  Cargo.toml  Readme.markdown
sql/: up.sql
src/: appdata.rs  main.rs
src/database/: user.rs
src/models/: auth.rs  mod.rs  responses.rs  user.rs
src/routes/: auth.rs  index.rs  mod.rs  post.rs  tag.rs  user.rs
