[package]
name = "blogger"
version = "0.1.0"
authors = ["Quinton Schwagle <qschwagle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1"
env_logger = "0.8.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] } 
serde_json = "1"
sqlx = { version = "0.3.5", default-features= false, features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "tls" ] }
rust-argon2 = "0.8"
rand = "0.7"
